<resources>
    <string name="app_name">QR Code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Scan</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="view_details">View details</string>
    <string name="prompt_email">Enter email</string>
    <string name="prompt_password">Enter password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="account_number">Account number</string>
    <string name="pin">Pin</string>
    <string name="atm_number">Atm number</string>
    <string name="csv_number">CSV number</string>
    <string name="pan_card_number">Pan card</string>
    <string name="voter_card">Voter card</string>
    <string name="uid_number">Aadhar number</string>
    <string name="personal_information">Personal Information</string>
    <string name="private_information">Private information</string>
    <string name="from_account">From Account</string>
    <string name="to_account">To Account</string>
    <string name="enter_account_number">Enter account number</string>
    <string name="verify">Verify</string>
    <string name="confirm">Confirm</string>
    <string name="otp_has_been_sent_to_your_register_mobile_number">Otp has been sent to your register mobile number.
    </string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_otp_to_verify">Enter otp to verify</string>
    <string name="transfer_successfully">Transfer successfully</string>
    <string name="done">Done</string>
</resources>
