<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="7dp"
        android:layout_height="match_parent"
        tools:context=".MakeATransactionActivity">

    <TextView android:textSize="24sp" android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/from_account" android:layout_marginTop="12dp"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/lblAccount"
              android:layout_marginTop="12dp"/>

    <TextView android:textSize="24sp" android:layout_width="match_parent" android:layout_height="wrap_content"
              android:layout_marginTop="12dp"
              android:text="@string/to_account"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/txtToAccount"
              android:layout_marginTop="12dp"
              android:hint="@string/enter_account_number"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnVerify"
            android:layout_marginTop="12dp"
            android:text="@string/verify"/>

</LinearLayout>