<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:hint="@string/name"
                    android:editable="false"
                    android:enabled="false"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtAddress"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lblGender"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMobileNo"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:enabled="false"
                    android:id="@+id/txtDob"
                    android:hint="@string/date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilAcNo"
                android:visibility="gone"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtAcNo"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPinNo"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:enabled="false"
                    android:id="@+id/txtPinNo"
                    android:hint="@string/pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAtmNo"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/atm_number"
                    android:id="@+id/txtAtmNo"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilCSVNo"
                android:visibility="gone"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCsvNo"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/csv_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilPanNo"
                android:visibility="gone"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPanCard"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/pan_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilVoterId"
                android:visibility="gone"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:editable="false"
                    android:enabled="false"
                    android:id="@+id/txtVoterCard"
                    android:hint="@string/voter_card"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilUID"
                android:visibility="gone"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:enabled="false"
                    android:id="@+id/txtUID"
                    android:hint="@string/uid_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>