<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:padding="16dp"
                  android:orientation="vertical">


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/lblHeaderInfo" android:layout_marginBottom="10dp"
                  android:textColor="@android:color/holo_blue_dark"
                  android:textStyle="bold|italic" android:textSize="24sp" android:text="@string/personal_information"/>

        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/design_default_color_primary_dark"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorAccent"
                    android:hint="Email"
                    android:editable="false"
                    android:enabled="false"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@android:color/holo_blue_dark"
                app:hintEnabled="false"
                android:id="@+id/tilName"
                android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:hint="@string/name"
                    android:textColor="@color/colorAccent"
                    android:editable="false"
                    android:enabled="false"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtAddress"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/address"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lblGender"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/gender"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtMobileNo"
                    android:editable="false"
                    android:enabled="false"
                    android:textColor="@color/colorAccent"
                    android:hint="@string/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:enabled="false"
                    android:id="@+id/txtDob"
                    android:textColor="@color/colorAccent"
                    android:hint="@string/date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/lblSecondaryInfo" android:textColor="@android:color/holo_blue_dark"
                  android:textStyle="bold|italic" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
                  android:textSize="24sp"
                  android:visibility="invisible"
                  android:text="@string/private_information"/>

        <View android:layout_width="match_parent" android:id="@+id/vwLine" android:visibility="invisible"
              android:layout_height="1dp"
              android:background="@color/design_default_color_primary_dark"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilAcNo"
                android:visibility="gone"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtAcNo"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/account_number"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPinNo"
                android:visibility="gone"
                app:hintEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:enabled="false"
                    android:id="@+id/txtPinNo"
                    android:hint="@string/pin"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAtmNo"
                android:visibility="gone"
                app:hintEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/atm_number"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/txtAtmNo"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilCSVNo"
                android:visibility="gone"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCsvNo"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/csv_number"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilPanNo"
                android:visibility="gone"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPanCard"
                    android:editable="false"
                    android:enabled="false"
                    android:hint="@string/pan_card_number"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilVoterId"
                android:visibility="gone"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:editable="false"
                    android:enabled="false"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/txtVoterCard"
                    android:hint="@string/voter_card"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/tilUID"
                android:visibility="gone"
                app:hintEnabled="false"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:editable="false"
                    android:enabled="false"
                    android:id="@+id/txtUID"
                    android:textColor="@color/colorAccent"
                    android:hint="@string/uid_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>